--- a/StoreSearch/Base.lproj/Main.storyboard
+++ b/StoreSearch/Base.lproj/Main.storyboard
@@ -16,12 +16,45 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WAs-FR-a1t">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="f7J-VN-dBu"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cKn-RF-fVo"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" placeholder="App name, artist, song, album, e-book" translatesAutoresizingMaskIntoConstraints="NO" id="Qc5-Zk-9Pw">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <animations/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="whv-Rs-xFx"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WAs-FR-a1t" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5hY-Np-cZT"/>
+                            <constraint firstItem="Qc5-Zk-9Pw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IpE-ri-Y51"/>
+                            <constraint firstItem="Qc5-Zk-9Pw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PEf-8u-YKj"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="WAs-FR-a1t" secondAttribute="bottom" id="XBf-Ov-Xqz"/>
+                            <constraint firstItem="WAs-FR-a1t" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mVB-lA-CoU"/>
+                            <constraint firstAttribute="trailing" secondItem="WAs-FR-a1t" secondAttribute="trailing" id="oAX-Qa-Sno"/>
+                            <constraint firstAttribute="trailing" secondItem="Qc5-Zk-9Pw" secondAttribute="trailing" id="q8h-qT-NZq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="Qc5-Zk-9Pw" id="93I-SE-dVO"/>
+                        <outlet property="tableView" destination="WAs-FR-a1t" id="6aR-cl-aO5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="337" y="387"/>
         </scene>
     </scenes>
 </document>
